# Taipan

./: .gitignore  CMakeLists.txt
include/tap/: CoreApplication.h  Taipan.h  TapObject.h  Taplet.h  Window.h
src/: CoreApplication.cpp  Taipan.cpp  TapObject.cpp  Taplet.cpp  Window.cpp
